# ChangeLog for app-eselect/eselect-java
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-eselect/eselect-java/ChangeLog,v 1.4 2015/07/29 17:55:43 grobian Exp $

  29 Jul 2015; Fabian Groffen <grobian@gentoo.org> eselect-java-0.1.0.ebuild:
  Keyworded for *-solaris, *-macos

  10 May 2015; James Le Cuirot <chewi@gentoo.org> eselect-java-0.1.0.ebuild:
  Remove PDEPEND wrt bug #315229 because it had unintended side effects and is
  no longer needed anyway.

  04 May 2015; Agostino Sarubbo <ago@gentoo.org> eselect-java-0.1.0.ebuild:
  Add ~ia64, wrt bug #465136

  31 Mar 2015; Ulrich Müller <ulm@gentoo.org> +eselect-java-0.1.0.ebuild,
  +metadata.xml:
  Move package from app-admin to app-eselect category.

  19 Sep 2014; Agostino Sarubbo <ago@gentoo.org> eselect-java-0.1.0.ebuild:
  Stable for ppc, wrt bug #500398

  19 Sep 2014; Agostino Sarubbo <ago@gentoo.org> eselect-java-0.1.0.ebuild:
  Stable for ppc64, wrt bug #500398

  23 May 2014; Manuel Rüger <mrueg@gentoo.org> eselect-java-0.1.0.ebuild:
  Add ~arm keyword.

  10 Mar 2014; Johannes Huber <johu@gentoo.org> eselect-java-0.1.0.ebuild:
  x86 stable, bug #500398

  08 Mar 2014; Pacho Ramos <pacho@gentoo.org> eselect-java-0.1.0.ebuild:
  amd64 stable, bug 500398

  12 Jul 2013; Vicente Olivert Riera <vincent@gentoo.org>
  eselect-java-0.1.0.ebuild:
  ppc, ppc64, x86 keywords added, bug #465136

  19 May 2013; Alexis Ballier <aballier@gentoo.org> eselect-java-0.1.0.ebuild:
  keyword ~amd64-fbsd, bug #465136

  04 May 2013; Naohiro Aota <naota@gentoo.org> eselect-java-0.1.0.ebuild:
  Add ~x86-fbsd #465136

*eselect-java-0.1.0 (08 Apr 2013)

  08 Apr 2013; Ralph Sennhauser <sera@gentoo.org> +eselect-java-0.1.0.ebuild,
  +metadata.xml:
  New package containing the Java projects eselect modules formerly in
  java-config, eselect-maven and eselect-ecj