@@ -1,0 +1,26 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-eselect/eselect-java/eselect-java-0.1.0-r1.ebuild,v 1.1 2015/08/06 21:54:30 chewi Exp $
+
+EAPI=5
+
+inherit autotools
+
+DESCRIPTION="A set of eselect modules for Java"
+HOMEPAGE="http://www.gentoo.org/proj/en/java/"
+SRC_URI="https://gitweb.gentoo.org/proj/${PN}.git/snapshot/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~arm ~ppc ~ppc64 ~x86 ~amd64-fbsd ~x86-fbsd ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+RDEPEND="
+	!app-eselect/eselect-ecj
+	!app-eselect/eselect-maven
+	!<dev-java/java-config-2.2
+	app-admin/eselect"
+
+src_prepare() {
+	eautoreconf
+}
