@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX oprofile-0.9.9-gcc-4.9-non-ppc.patch 1612 SHA256 491897ec7b00e72f0b645c5b0eb6212d7edc46dc6322978d8d69b655fb2ba928 SHA512 6cd0d067a95528aa40adb76cb38fc7ba76da16357621fb9e25ad6c61662e5bab9ebc9f52ee23da078aed2f650d95d2a3dc76389d93775e328be34f65570abaa3 WHIRLPOOL 3096a872a734fdf925e15f014c0327dcf664aec29ff2195abef00416142959a7dceaebe7245cbcfa04f708d7777f5b999ea597c83fa2414a03c6c995821017bf
 AUX oprofile-0.9.9-gcc-4.9-unused.patch 1285 SHA256 123930ceb8f1a743cf8d1bd679d73505dd419807335c19616c44ba8395974c5e SHA512 79f3388bb2e3a76611ecc414618f89b27f471f464aa4be63ac54b620b4b37c4e4e39179230775f712fcf63919a85f3808e1577f6e7f4ae3319ebe28c44667952 WHIRLPOOL c96332536a0fcc6d38765b7d7e9f27b373cd3cb0c6c70d22dade13e4c15a907826ca1e390fa5b77ac580e602c594ea2aaa8a3ca0860a558f3213d8273cba3261
@@ -7,26 +7,26 @@ AUX oprofile-1.0.0-athlon.patch 641 SHA256 bb2fd7d0d644df165f225efc14731c0e54a13
 AUX oprofile-1.0.0-opjitconv-open.patch 328 SHA256 8c10ac6444c139586376a9901d9c9e6f280febb1b48c4704986b31ac9307e7fa SHA512 199b6c3ac8d48ba2cff409d08a258390c9489b486a21d3a4b93a276e5b70ba339557113c3f0b4ff73466671a977fb9de0e1bd14b37b4f3273b69bf0c9462a2a4 WHIRLPOOL a61d0ee8cad13baf9fa6960e4cdfbb27647456382147ec178c7bf6358e8aefe4af2d73c7c33de3eadaea6d53f5b409fcfd70d59d9f588fc7d0b601cc701a1103
 DIST oprofile-0.9.9.tar.gz 1502834 SHA256 1e523400daaba7b8d0d15269e977a08b40edfea53970774b69ae130e25117597 SHA512 98cc3d2c15744d02ed649833cf4797482aec73bd52653e916f80b490e17a8250d988c4c945e52dd8999a0d0603fec405e99c9570dfc54baa4992950fe4d8763f WHIRLPOOL 534d04449923da5008dbf044f9783a1d39ad8b749170edf04a503ca1a885455fc8aef4f5894060d14135f5e3b0a0d577897779eed30dc26deff9b0663fcbb7d1
 DIST oprofile-1.0.0.tar.gz 1397396 SHA256 847110b4ecdcf8c8353cd38f94c1b704aad4bfcd9453e38b88d112cfb7e3c45a SHA512 35b0e9f23c1d8df0aebda3f9b550692a896424de901d529a0ad41da41000328f33d184dcbb8e6f8367008723c8b2177b621757a2282b4c881ac46a57e1b51010 WHIRLPOOL eaf7feefb6561851d2f8573ec60f2086245aa9fc034c8f4ab62679895ae80ca45e8dcb4bfdcb96ad477c5b446b7f0b11e339d9dc270e8b4b0366bc3a9e980143
+DIST oprofile-1.1.0.tar.gz 1468502 SHA256 cf759a6de1a6033d5dfc93bda129a9f2e128aecc4238cc657feb0801d1b0366c SHA512 b26f67f20172a4912c0aafb3adf83f9084ea62b9ca89e4cfcb3e13276114a05b07587f7d250028995a10c39ae993e2bce271be11688010473ab9f0fd81715758 WHIRLPOOL b268af1578c485165624e0152751b6c5053c745e6813d6f13ea554993f311e540312854a36011e10560e82c378ef1fc357220a69cd713f73824ae249cc150650
 EBUILD oprofile-0.9.9-r1.ebuild 2051 SHA256 51ecd3710b26cfb8333a85cf3078abd0aad674786c125e8b4076dde21f419621 SHA512 a1ae9b9cd97a7b87953032dda0c9ee757f64b917be8ab67bec1df2d69f9eac1561a0168fa453cc041e8fc02a33791cc09c65dfac74a91c4dd7c5ac5d7944c1e6 WHIRLPOOL e40f5903839ad67c442fb48b0eb997fae2f5cce9122c082eee88da437bf85a47c3f9dbaf464b96b3ee27f0812e97f3339326a6e818a560935c23a0fb9d7feda4
 EBUILD oprofile-1.0.0-r1.ebuild 1872 SHA256 63031ec03d1f7f6e90d85fdac9dc8bf2ed240187a6e8bcc890878bbd465bbb89 SHA512 39acdc21b3811a70580f67934c08f2b26fd7dab1cc6e85417a6648070257d6457bfa0065cb4e790dd2125ade4e1db64779e995f1aed4cbd6fbf766b5bf939ce0 WHIRLPOOL 33afae4277385b3d48071d9aa87fdc30cdd12c09085673e237281403607f1cf36f8237ad0e1fb53c642e47aec36419862ad1eb3ea13b88ea7860e9933cff3c19
-MISC ChangeLog 16734 SHA256 bfc776fd0d4f9440b6a3a4660697230102ef458fe232e5bbc367b5cb80b51c05 SHA512 17ee53ab9a063d3e492d5768de79b9f3c7ed6f1fae1d4939a85a8437fe00ecfb8ff00d63ee5308679e66934da5343dd86d5705bb9f2e20c81de6e59f9f7d601b WHIRLPOOL 4867cc63679c537357245b7961d0d6f7dd73d2b3ad42e10115814cd3816e386b4f9f63b585fe0edbee5809e8a8d5d2a77b6f7c664539288d17d4bde0a636ee44
+EBUILD oprofile-1.1.0.ebuild 1755 SHA256 2d9de134319f89359395376da622f9f0ebc38580f08f6a7f13fdda1e91018928 SHA512 01bc4498e270fa791936bfbe646d24b59e0dbcde38c8e0c6ff1df711de489a34e3f205bd72df0995929df159a74fe658a656349db3ced6c921eb2eb2d9a8baa5 WHIRLPOOL 79d8f5901f0c7f4b716d53a443bb61f1ef7b9907ba27185d5e045ec3eaa316b1512ff6648ee82376e10114f6f63dd1a69084ec6e76c65553ca3418db7ff7e1dc
+MISC ChangeLog 16859 SHA256 7da2ca27ee9cca6121d43a39383f43f55ac89b427785b0ca060babcef596e53c SHA512 50bb462e603642a869da7be3479b4a7fe95c85f8be7a2ee49e5c33dc4a36a9d93e89e9acc6841ce49d49c2a9ef32b4b0b57eb57ef6f1e315204ad181541995ef WHIRLPOOL fb1589b46ec17b4f513fa4067caaa2bbe9d784c9b2d89446a6be9e6b103e0c3b415aaf23ac89de2eb1f4d3db24cec7d2049bf175fa7431f1c3b30ded86b4d223
 MISC metadata.xml 409 SHA256 c75230b67dd5deb987036a6e0fbe7a113dfb300c0a63eb657cf08e5e93eea945 SHA512 4c5525d0687f0331260a2775486c7a205fc3044d1c87c026ded7376085fd49598cc055abec11477628c7f46c3289f8a7215b9cbb0a6abb2be27fcfb6fcc01220 WHIRLPOOL 5b522a08212b5802e95d8772afd12566828179be12a93df3dd141ae0b0287ad1423241f2609da15b0350bc5925088c293079282c8a64238426651fddc5276525
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVfsA3XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
-OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiePgQAIXDaj/vTFu7uSzkbpECd8Lj
-VfQAThBa+7BUSTdnlrgKZGiy22RDcKyXGyrooXdpPcr2umqtlR4BwojLkG+5fulx
-1WBU08MEdlJPw+D5EMAhe0lHoXLTPLbo3ECh842ubYLizeZmdoBUhEQlMF/PB0BQ
-BcPD+jekeqrlZcuPUEWos44kd1/SlbMxWt4R7JRuPb+OUOR4QRYj9vB8mPk4YyZP
-3+RqGpUIj21BaWI7EutVjzM9/uTM0jpZ6E6DQkfa9pOMTsbi8ksrS7cw34BC9+EI
-V3z0gsRiDyKvLIm/bl1NqlC6tnXjMlXZpnlYJ6sfoQwUsn/lOALpUC+M6EtoArnD
-2VjEYXJilVgcOTl+O4tHyFdBwVYUBHJ0pGfAz9nXb9Rf0mWBacexJBIuGfuVYc7X
-/Npo+4O9lhAbVstGfaTFD0hZUOYhIZJEXgsrxJkrfx4pp6TEG57brtF88lC/dGTD
-AzkDndIf8yGwlUkuV2CR4Lfx8IqY9l8+cSRBQSpFPMrCxCONLFBU7jEddPQmu3P+
-LyWvp529hUPjZVpaWtDxXOhUtntBg/w/eWB6bbXyGNm08B4hlS9RyfEEkDX3DtRk
-ms+YR0wRIBnKT7cMUMQJr/p+8CcxBQtY7i5pIRgRKwnlTBD9GH77am26EfiDwrLd
-im3JHJQH2jrMjcbeItr+
-=WH4t
+iQIcBAEBCAAGBQJVw9YdAAoJEPZTWjO6HuSNfioP/0wjEIFOEqeRAJawhOfvSWu+
+xYXjSI6ko2O/2n85k8FJdFrXZjT/yel5Kfex10zwm35LvuD3VNI7qDtb01Au1aIn
+/jrXCitlTv/5Io+sYr6p1Qn69DF1rAqUJdTv8zQdNfBN+2vZNZ5p45VvxBu5Oori
+iRCPUpYsC3tQKi3674Ah585XK2mlBz5rbwhpEP7g0VvRscV2hJUt07j/Jpt2PI0n
+BGBzcfjtPsmRv7E1VQIepo6cIgw3DQJTfgJyVDr+x1lric+MC27aNulpBWro8ric
+OZDI1B9kSCN01Q1JfBrPLPih2Fe8p3Tvw0iToMKEy1jMn1D1peiM2R/Q6qsh1ApB
+y2TpW7dWtjod6BcLxBtmjFiPNunKV7jLaWVICK9nCSwpRj/Fso5bC+y2f978wSwv
+XYEX10ZzkzKnFYEoYIIPKKX4+Mi0wE+zJI9746LPROZaBopgLBDFXLkAc3GLKVTV
+p8v+BEBpm7tO1FvryWStwaq478qtLj3HkHR87r0E9EUKURdsyKEjDSFkHxBPnvEJ
+V/yIyKNCDrr8Y0hjfAgFtaZR9SLmtbUt8LF8+w1iiSUmRQxyPqIw6b/J2jJha1+4
+I4CgKsOGAlEokFzTuj66Dg7c5qEKVgxE0X8pnzr3aAmH06NMZqVmY467udBvZBba
+yGYEqxwYDH393syPIyQn
+=FGOm
 -----END PGP SIGNATURE-----
