@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install postinst preinst prepare setup
+DEPEND=>=dev-libs/popt-1.7-r1 >=sys-devel/binutils-2.14.90.0.6-r3:* >=sys-libs/glibc-2.3.2-r1 java? ( >=virtual/jdk-1.5:= ) >=sys-kernel/linux-headers-2.6.31 java? ( >=dev-java/java-config-2.2.0 )
+DESCRIPTION=A transparent low-overhead system-wide profiler
+EAPI=5
+HOMEPAGE=http://oprofile.sourceforge.net
+IUSE=java pch elibc_FreeBSD java
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~mips ~ppc ~ppc64 ~sparc ~x86
+LICENSE=GPL-2
+RDEPEND=>=dev-libs/popt-1.7-r1 >=sys-devel/binutils-2.14.90.0.6-r3:* >=sys-libs/glibc-2.3.2-r1 java? ( >=virtual/jdk-1.5:= ) java? ( >=dev-java/java-config-2.2.0 )
+SLOT=0
+SRC_URI=mirror://sourceforge/oprofile/oprofile-1.1.0.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-pkg-opt-2	f9bbbe5092225a2059aa9e6a3a2b52f1	java-utils-2	240e3f28c6b42b9f36d3c36b8b27fbb2	linux-info	8cbc678e083c23e4ad546ca6509cf304	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=223e7769deb4688ef96d6623000f68a5
