@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install postinst prepare
+DEPEND=dev-libs/libx86 crypt? ( >=dev-libs/libgcrypt-1.6.3:0[static-libs] dev-libs/libgpg-error[static-libs] ) fbsplash? ( >=media-gfx/splashutils-1.5.2 ) lzo? ( >=dev-libs/lzo-2[static-libs] ) >=dev-lang/perl-5.10 >=sys-apps/pciutils-2.2.4 virtual/pkgconfig !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DESCRIPTION=Userspace Software Suspend and S2Ram
+EAPI=5
+HOMEPAGE=http://suspend.sourceforge.net/
+IUSE=crypt fbsplash +lzo threads
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=dev-libs/libx86 crypt? ( >=dev-libs/libgcrypt-1.6.3:0[static-libs] dev-libs/libgpg-error[static-libs] ) fbsplash? ( >=media-gfx/splashutils-1.5.2 ) lzo? ( >=dev-libs/lzo-2[static-libs] )
+SLOT=0
+SRC_URI=http://dev.gentoo.org/~bircoph/distfiles/suspend-1.0_p20120915.tar.xz http://dev.gentoo.org/~bircoph/patches/suspend-1.0_p20150622.patch.xz
+_eclasses_=autotools	2264f05fbbbaaf83d34ec81e72b38ffd	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4
+_md5_=8096811fdea4d2502717c2421e0436ec
