@@ -1,29 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX suspend-1.0-automake-1.13.patch 310 SHA256 a9527d4d0b44ad7dc663f4aeeded3db1d1265a8fec8fc8b253ff3a2460eee207 SHA512 e03629c2f8ae7e1d6c031cf4e8fd18f303621b57e0266734c21cf9846434b17cefbd80a83e0d8b945780dd3bc19d3d776f9c33d222ab3f07a9846306343fc16c WHIRLPOOL bd793135e601edcccb313e2a1e3c010baeaea8bccd2f7bb7f2f4ee373e806ba45521a06575d925cc536945d8f67ed337ecb6f8e985920efcbc1ed76373b2a8f8
 AUX suspend-1.0-bzip2.patch 971 SHA256 1c04b63719043c4d8c962a87bf6b8f33f1c2a2df7302c2c0afd5e9135ec8ca3e SHA512 9b79a497b0a57eda7f03f8a952293a20fbb16fcefcb11aaabea5a68a77421dec56929022f694ed90b4c97d4f2d3a8b390fe6ccf54378c6e152696109e2394d00 WHIRLPOOL e9060fee64c59851d516fb26d1b3e936f87cfc89c059ace05a814e13ff7bd0f3972b53c011e0834492b3357ebf235994190a4c9167fb1a942759dcc76d1410b4
 AUX suspend-1.0-errno.patch 240 SHA256 88eae010830c90b4fe6f115c3d638df5751f0ffa1cab4342aa33031fe14e9c03 SHA512 8bfcf94cc63e108de81e1838f9f5e833ecf17ef08c4dd0cc6e30163d547609f761104b48c1aa4a776cec181e54438d771b6f2135d56d4c05b387a027168192bd WHIRLPOOL 524cf627ec1f726e3339f206d6b9a8c442fcd4d79d6535a4b87172e9b7a09af3bc8e6ad4689bc2d443e18d6a73dd7db742f79cf7960237a65400f46468695cbc
+DIST suspend-1.0_p20120915.tar.xz 111080 SHA256 4fa7551ec5ce3ed5d7412ad14e01f5fbac3a541db9d94ad6adf20b87d9c32eca SHA512 bb714b4a7c0f5749c4b711a5c38ca5d8cb5078176a75387957123f75cfe8348adc3aa4e96335eb65c14ad1dd2f99fd6dbca3b415525dd39b3c547f9b13b775be WHIRLPOOL 6f5ea4a17572bc1e30d70258a0439b40a29ea67f0251cecec81bdd3dee92e7801645c37dbb868b0f498c093193bd574f361dc015810965c09f53d75cfb391e7f
+DIST suspend-1.0_p20150622.patch.xz 6052 SHA256 bc05a8896b89520b70a5c3b1a9903d94b75bc82756f6edbdddf53c6d1120af14 SHA512 8ca6d51e96b4d405133b4ee3bc246d79e4270052fe10202f94a85075dad314a33bb586ebbcf3a04c2ab93c74eb5f8d4e1dfca1c88fc56467d347eda147e4d3aa WHIRLPOOL 09f07d6ece378715c0bb1017ade8b97277f818e00accec0f2b5b4573664aafb68dc3713fe1780d4b38707120c0b62c35ec6d6818aec0f59ad3c14247b4cf1a7b
 DIST suspend-utils-1.0.tar.bz2 408451 SHA256 0206ba6332860b6da57acc79cc0f8604150ef0835ff9633fd42d59d181a6c85d SHA512 481f7ab6e6d43b963cf7abf4d16a9911035dbce13d96e11eeadd50bbd2b9671c597eab0e3060536dcb0d6d848e30ac0e7ff534275fc2d66d2064b75066a4adb8 WHIRLPOOL 4321dcaeda4b5b7d822a1cade82b88094d8706d0daaa06b72d3c053a4bac14ed85b55a4681e0a52f116a63e3b8f4255c57e55fb43961f77149faf1b8aa918d58
 EBUILD suspend-1.0.ebuild 1440 SHA256 cbdbbbb7e1902a498ab55c00988364a9214c15b7ec245a7327d11d29f2d55a8a SHA512 65579985aa2f4a6d930fc589e7c3e8634da84d4af0091db3302e26d01a0f756dfb926dd1528a8d682f88472124602073e6ff7b45b9e3c138f0f11f3a27c10dd8 WHIRLPOOL ba4da4fee5482e72d8085bff447df6f6231240f60cfcf6426958e178f9310d067ea9b1f06df11458b60d759e4deca64e10a14e459e584f077ec000b48b7f6b21
-MISC ChangeLog 4704 SHA256 0f55c285058e348cd93cc6bd6d0142ddc006f98206544e59c1f029b5febcb8d9 SHA512 b0b573cae9a64bddbc883eca0f2db2550cef3ca83e118a791d625c8b1a3230883dd13f12a4ce242f3b83850e6e41dabf8aee6de4bf9cbb054d52f960b7c7593b WHIRLPOOL e77a12790f94c772549cdf93a54696be997055b9f1eff5be7e252fc3d936f12c6b1439a338a292e75d8501c124e463b3cd196fc4c304d73fbdee539592d7f7c9
+EBUILD suspend-1.0_p20150622.ebuild 1398 SHA256 fffa0fb89df4740bddf838b7c07afd6dce58af75a321df69d26c11328e2b793a SHA512 6f435acda69ae86335b4319d66e14d6558d240c0e70e018b5a4418c34bcd13478871d1d819e46c1ee2818c25d290919d2c2bdd637c7ac2bda585e94cc0e56ffe WHIRLPOOL 7c0c3ee87ecbc9a43c2afdab37866e8ab26de00f4f1070c40e67c40f27134577e5f84a057a806d880960b5c15466ea6650b00befdbe5c070e150585348047587
+MISC ChangeLog 4866 SHA256 46390f8036b23637b570c541d88b6148b01b08c0c6b4e8d393648ad17499df2b SHA512 f20de93cad9ee09237ae337878a70ae0e5f991b9e3b7fb127b217b0b93c42ed5fbc92004c87e034908daa2a6f153f5c49b18726435765b5696469640df499c4b WHIRLPOOL d18c56030ff18f182da66b76e307cd97e6e38deab265d32f094483142c2c75dc78f982e1624d27d6f0f8529e0a14e39402d74524606a89f91a18d7324bad46b2
 MISC metadata.xml 461 SHA256 9a633660373b250a0c2633df4c4d5439552549885bbbb335a9b113cbf74a997e SHA512 72562dca1980eb0f3cca95f5fd2b7d963fcb1ed20b3a8f7ff940b4508ea8e0da3c9ae700936778ca5f9cca02c902d159f9535f9c4bee907f11b1217090141ca6 WHIRLPOOL f97a9f3d85f1e996be58f0e2b46d32b2007b4270ae4f8d2e97ffd1553a417d7234f8b499bdda16f258771804a6917f0d44c2badcb282fad1db7d4f6c815ea85a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVfyyZXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
-OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiMQ4P/3GWqklCC+omq2waFPcJMypa
-9Y0FvhDSeOOLX7VFf8Df8DT/DVErJnyzntDbetDWmZ2R01LeN9LEwHFOHAsa17+F
-qDk1xP/9ZXwNLw47nmJVUO84Pt5CvQcQNdckvH0RHCGilLyQYEHeA8O6Ax4gZFp8
-2tdx2ngR7CxdpMuCGq8hjm/5ssR0IQEwWqEnCQsxumGAID6FrNj70VEnIlsdK9rT
-Kf8jAPlYzBJVemHbGlTETo/JBH5yNm7e37J/ZzJAWkpzXcUv7Rkq7bsi1ESaa8hR
-7lJtNApbh7rREYX8JTd64mSOe0sSulhez1ecsyc86TithpDYvJMWqzfiJEpf9Xhl
-OrXWXbY9PKGz9n8BCw418bDPbKUui0WIff98rXt/Yt34tgEu1OdhxqyVnaG9mAWP
-7BWUrc0uu9dXjk99fzUgl2DjngQWXdTQ6t6lSuk/9w1yqo7v4clGnPr9gACE9GLf
-Vnmvaqf7cTevNSGnhc7dg1sjfofrom6KAtFH/HwA0X+ekoHnPF+eSrMSsqqCMPKg
-hniZVC0R9OizIUJmzMtnqJdthPNyUIBCW76ZkhQa1Ye95Gw97wQlLofTW94iSDtF
-i7v7l2VSM5G+AOpB8HxTVvmX710POpF6brhcMPtYF/k0EZ6G/tGJ9liBzLfM6Mn8
-Aahg3NU6dQi/NKptjWDf
-=a3Zt
+iF4EAREIAAYFAlXD13MACgkQknrdDGLu8JC1/QD6AtZFnAT96/8hPh/pzxKwYBqQ
+4ZIGvvdTPfb3QSvJb7sA/A2tjS9Oh+1OyxiksxLmMA2a8nc5Q+GGvJe8dx20HB+u
+=R3cc
 -----END PGP SIGNATURE-----
